# mis-ec-UI

./: CMakeLists.txt  README.md
src/: msi_ec_control_gui.c  msi_ec_control_gui.h
